# PythonCheatSheet

./: .replit  ai_guide.py  commonusage.py  data.json  directory_guide.py  main.py  programming_test.py  pyenv_guide.py  pyproject.toml  run_guides.py  sql_guide.py  testing_guide.py  turtle_guide.py
attached_assets/: Pasted-2025-02-19T16-24-49Z-info-Deployment-9ae937c5-eace-4342-8c9f-11dc641a21a3-2025-02-19T16-24-49Z-inf-1739982442116.txt
python_files/: advanced_calculator.py  ai_guide.py  commonusage.py  directory_guide.py  django_guide.py  flask_guide.py  json_guide.py  packages_guide.py  pip_guide.py  pipx_guide.py  pyenv_guide.py  pygame_guide.py  pypy_guide.py  pyqt_guide.py  run_guides.py  server_guide.py  turtle_guide.py
