[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.6",
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "pyqt5>=5.15.11",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "requests>=2.32.3",
]
